updated footer font

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ hr {
 footer div {
     color: rgb(206, 206, 206);
     text-decoration: none;
-    font-family: "Circular";
+    font-family: "Lora";
     font-style: bold;
     font-size: 41;
 }
